<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/hint_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_item_name">
        <EditText
            android:id="@+id/edit_item_name"
            style="@style/EditorFieldStyle"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/hint_item_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_item_quantity">
        <EditText
            android:id="@+id/edit_item_quantity"
            style="@style/EditorFieldStyle"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/hint_item_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_item_price">
        <EditText
            android:id="@+id/edit_item_price"
            style="@style/EditorFieldStyle"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/hint_supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_item_suppliername">
        <EditText
            android:id="@+id/edit_item_suppliername"
            style="@style/EditorFieldStyle"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/supplier_phone_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_item_supplierphone">
        <EditText
            android:id="@+id/edit_item_supplierphone"
            style="@style/EditorFieldStyle"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>